# KettoLingo

./: Dockerfile  README.md  app.py  compose.yaml  import_categories.py  import_csv.py  import_languages.py  models.py  pyproject.toml  repositories.py  services.py
Dokumentácia/: main.tex
FE/KettoLingoFE/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
FE/KettoLingoFE/src/: App.css  App.jsx  LearningPage.jsx  Login.jsx  Overview.jsx  Profile.jsx  Register.jsx  firebase.js  main.jsx
FE/KettoLingoFE/src/components/: Header.jsx  LearningPage.jsx  Login.jsx  Overview.jsx  Profile.jsx  QuizPage.jsx  Register.jsx  header.module.css  learning.module.css  login.module.css  overview.module.css  profile.module.css  quiz.module.css  register.module.css
SQL/: createProgressTables.py
db/: compose.yaml
migrations/versions/: 065da3fbbbff_add_json_details_column_to_quiz_result_.py  3eb4a7e027c8_add_language_id_to_quiz_results.py  406ee7a2bf24_initial_migration.py  7b36fea9c834_add_native_language_id_to_user.py  7f5c6776cadf_add_tokenblocklist_table.py  a1d0620d943f_create_user_and_tokenblocklist_tables.py  cb149c66525d_add_languages_and_words.py  ddecc5baaa37_create_user_and_tokenblocklist_tables.py
tests/: conftest.py  test_endpoints.py
words_csv/: animals.csv  clothing.csv  colors.csv  family.csv  food.csv  household.csv  numbers.csv  restaurant.csv  sport.csv  travel.csv
